--- a/SmallScale/FacetPropagation/Inputs/quick_64.in
+++ b/SmallScale/FacetPropagation/Inputs/quick_64.in
@@ -1,5 +1,5 @@
 3 0.1 1e-8 20 1 1e-6 0 0 1 2
-1 Surfaces/trivial_480.dat
+1 SurfaceFiles/trivial_64.dat
 
 1 0 0 0 
 0 modded_trivial.dat
@@ -9,7 +9,7 @@ TrackFiles/trivial_tracks.dat
 0 0 5  
 901 0 90
 2 1e8 1e9 1
-Outputs/Statistics/quick.log
+Outputs/Statistics/quick_64.log
 0 Outputs/frequencies/frequencies // columns are const theta, rows are const phi, tables const frequency
 1 Outputs/phis/phi // columns are const freq, rows are const theta, tables const phi
 0 Outputs/thetas/theta // theta file
@@ -26,14 +26,14 @@ Line 1:
 	SIN_APPROX (1e-10 value below which to approximate sin x as x)
 	MAX_SPLITS [=0] (max number of splits of facets near Cherenkov angle)
 	FMODE (=1 to loop facets as inner loop, =2 to loop as outer loop. Use 1 unless a very large surface)
-	SIN_APPROX_2 (=1e-6] (value for approx sin x = x in generating specular vectors)
+	SIN_APPROX_2 [=1e-6] (value for approx sin x = x in generating specular vectors)
 	TDIV_METHOD [=0] (method for dividing tracks. If > 0 then force TDIVS = this value.)
 	TDIV_CONST [=0] for the tracks to be 'intelligently' split up to TDIV_METHOD times. [=1] to force the number of track divisions to TDIV_METHOD
 	FDIVMETHOD [=1] (method for dividing facets. If > 0 force FDIV=this value)
 	FDIV_FACTOR (factor between highest and lowest frequencies where track facet splitting is identical)
 
 Line 2:
-	Input File Type (=2) [type of input file - binary=2 or text=1) (input file for surfaces)
+	Input File Type (=2) [type of input file - binary=2 or text=1] (input file for surfaces)
 	Input surface file name [name of surface file!]
 	
 Line 3:
