--- a/SmallScale/FacetPropagation/Inputs/ModD/modD.in
+++ b/SmallScale/FacetPropagation/Inputs/ModD/modD.in
@@ -3,17 +3,17 @@
 
 1 0 0 0 
 0 modded_trivial.dat
-TrackFiles/trivial_tracks.dat
+TrackFiles/Divisions/trivial_4m.dat
 0   0    0.0    0.0    10.0
 1.8 1.8 18e10
 0 0 5  
 901 0 90
 1 1e8 1e9 1
-Outputs/Statistics/model_D.log
-1 Outputs/Frequencies/frequencies // columns are const theta, rows are const phi, tables const frequency
+Outputs/Statistics/modD.log
+0 Outputs/Frequencies/frequencies // columns are const theta, rows are const phi, tables const frequency
 1 Outputs/Phis/phi // columns are const freq, rows are const theta, tables const phi
-1 Outputs/Thetas/theta // theta file
-1 Output/Time/time // time file
+0 Outputs/Thetas/theta // theta file
+0 Output/Time/time // time file
 
 
 
