--- a/SmallScale/FacetPropagation/Inputs/ModD/modD_fdiv.in
+++ b/SmallScale/FacetPropagation/Inputs/ModD/modD_fdiv.in
@@ -1,4 +1,4 @@
-3 0.001 1e-8 20 1 1e-6 4 0 1 40
+3 0.001 1e-8 20 1 1e-6 10 0 1 40
 1 SurfaceFiles/trivial_448.dat
 
 1 0 0 0 
@@ -11,7 +11,7 @@ TrackFiles/Divisions/trivial_4m.dat
 2 1e8 1e9 1
 Outputs/Statistics/modD_fdiv.log
 0 Outputs/Frequencies/frequencies // columns are const theta, rows are const phi, tables const frequency
-1 Outputs/Phis/phi // columns are const freq, rows are const theta, tables const phi
+1 Outputs/Phis/phi // columns are const freq, rows are const theta, tables const phi:
 0 Outputs/Thetas/theta // theta file
 0 Output/Time/time // time file
 
