--- a/SmallScale/FacetPropagation/rough.in
+++ b/SmallScale/FacetPropagation/rough.in
@@ -1,11 +1,11 @@
 3 0.1 1e-8 1 1 1e-6 0 0 0
-1 Surfaces/trivial_128.dat
+1 ../Surfaces/trivial_128.dat
 1 0 0 0 
 0 modded_trivial.dat
-TrackFiles/example_track.dat
+../TrackFiles/example_track.dat
 0   0    0.0    0.0    50.0
 1.8 1.8 18e10
-0 5 36  
+0 0 5  
 90 1 90
 2 1e8 1e9 1
 CIRA/statistics.log
